--- a/css/faq.css
+++ b/css/faq.css
@@ -24,7 +24,7 @@
     font-size: 22px;
     font-weight: 700;
     line-height: 30px;
-    transition-duration: 2s;
+    transition-duration: 0.3s;
     transition-property: background-color, border;
 }
 
@@ -47,7 +47,7 @@
     font-size: 22px;
     line-height: 50px;
     font-weight: 400;
-    transition-duration: 2s;
+    transition-duration: 0.3s;
     transition-property: color;
 }
 
@@ -103,7 +103,7 @@
     text-transform: uppercase;
     position: relative;
     z-index: 10;
-    transition-duration: 2s;
+    transition-duration: 0.3s;
     transition-property: background-color;
     transition-timing-function: ease;
 }
@@ -126,6 +126,8 @@
     transform: translateX(-50%);
     bottom: 90px;
     z-index: 3;
+    width: 97px;
+    height: 97px;
 }
 
 .hero__link-img {
@@ -133,7 +135,7 @@
     border-radius: 50%;
     outline: 1px solid transparent;    
     transition-timing-function: ease;
-    transition-duration: 2s;
+    transition-duration: 0.3s;
     transition-property: stroke, outline, background-color;
 }
 
@@ -146,9 +148,8 @@
     stroke: #6C0287;
 }
 
-.hero__link:focus .hero__link-img {
+.hero__link:focus {
     outline:#CD06FF solid 1px;
-    /* outline-offset: 3px;  */
 }
 
 .hero__link:active .hero__link-img {
@@ -246,7 +247,7 @@
     height: 228px;
     padding: 166px 40px 6px ;
     transition-timing-function: ease;
-    transition-duration: 2s;
+    transition-duration: 0.3s;
     transition-property: transform, box-shadow;
 }
 
@@ -302,7 +303,7 @@
     background-size: cover;
     max-width: calc(50% - 20px);
     width: 100%;
-    transition-duration: 2s;
+    transition-duration: 0.3s;
     transition-property: color;
 }
 
@@ -387,7 +388,7 @@
 	user-select: none;
     width: 250px;
     height: 55px; 
-    transition-duration: 2s;
+    transition-duration: 0.3s;
     transition-property: background-color, border;
 }
 
@@ -461,7 +462,7 @@
     height: 27px;
     margin-right: 12px;
     vertical-align:bottom;
-    transition-duration: 2s;
+    transition-duration: 0.3s;
     transition-property: outline;
 }
 
@@ -475,7 +476,7 @@
     margin-right: 12px;
     display: inline-block;  /* нужно ли это св-во оставить??? без него ничего не меняется */
     vertical-align: bottom;
-    transition-duration: 2s;
+    transition-duration: 0.3s;
     transition-property: outline;
 }
 
@@ -529,12 +530,13 @@
     width: 100%;
     resize: none;
     padding: 11px;
-    transition-duration: 2s;
+    transition-duration: 0.3s;
     transition-property: border;
 }
 
 .booking__fieldset-input:focus {
-    border: solid 2px #CD06FF;
+    /* border: solid 2px #CD06FF; */
+    outline: solid 2px #CD06FF;
 }
 
 .booking__fieldset-wrap-name-tel {
@@ -568,7 +570,7 @@
     max-width: 280px;
     width: 100%;
     border: solid 3px #FFFFFF;
-    transition-duration: 2s;
+    transition-duration: 0.3s;
     transition-property: background-color, border;
 }
 
@@ -766,7 +768,7 @@
 .questions__svg,
 .questions__svg-path,
 .questions__svg-white {
-    transition-duration: 3s;
+    transition-duration: 0.3s;
     transition-property: stroke, fill, outline, background-color, border;
 }
 
@@ -847,7 +849,7 @@
 
 .footer__link-img,
 .footer__link-img-path {
-    transition-duration: 2s;
+    transition-duration: 0.3s;
     transition-property: fill, outline;
 }
 
@@ -886,7 +888,7 @@
 }
 
 .footer__link {
-    transition-duration: 2s;
+    transition-duration: 0.3s;
     transition-property: color;
 }
 
@@ -917,7 +919,7 @@
 }
 
 .footer__contact {
-    transition-duration: 2s;
+    transition-duration: 0.3s;
     transition-property: color;
 }
 
