--- a/css/faq.css
+++ b/css/faq.css
@@ -17,8 +17,8 @@
 
 .header__btn {
     /* box-sizing: border-box; */
-    color: #fff;
-    border: solid #CD06FF 3px;
+    color: var(--main-color, #FFFFFF);
+    border: solid var(--color-pink, #CD06FF) 3px;
     border-radius: 10px;
     padding: 12px 32px 13px;
     font-size: 22px;
@@ -26,16 +26,17 @@
     line-height: 30px;
     transition-duration: 0.3s;
     transition-property: background-color, border;
+    
 }
 
 .header__btn:hover {
-    background-color: #6C0287;
-    border: solid 3px  #6C0287;
+    background-color: var(--color-purple, #6C0287 );
+    border: solid 3px  var(--color-purple, #6C0287 );
 }
 
 .header__btn:focus {
-    background-color: #6C0287;
-    border: solid 3px  #6C0287;
+    background-color:  var(--color-purple, #6C0287 );;
+    border: solid 3px   var(--color-purple, #6C0287 );;
 }
 
 .header__btn:active {
@@ -52,7 +53,7 @@
 }
 
 .menu__link:hover {
-    color: #6C0287;
+    color:  var(--color-purple, #6C0287 );;
 }
 
 .hero__text {
@@ -70,13 +71,13 @@
     font-size: 100px;
     font-weight: 900;
     line-height: 141.02px;
-    color: #CD06FF;
+    color: var(--color-pink, #CD06FF);
 }
 
 .hero__text-size {
     font-size: 75px;
     line-height: 105.76px;
-    color: #CD06FF;
+    color: var(--color-pink, #CD06FF);
     font-weight: 900;
     font-variant-caps: all-small-caps;
 }
@@ -91,8 +92,8 @@
 }
 
 .hero__link-booking {
-    color: #fff;
-    background-color: #6C0287;
+    color: var(--main-color, #FFFFFF);
+    background-color: var(--color-purple, #6C0287);
     box-shadow: 3px 3px 5px 5px rgba(68, 15, 81, 0.6),
                 -3px -3px 5px 5px rgba(68, 15, 81, 0.6);
     border-radius: 10px;
@@ -132,7 +133,7 @@
 }
 
 .hero__link-img {
-    border: 1px solid #FFFFFF;
+    border: 1px solid var(--main-color, #FFFFFF);
     border-radius: 50%;
     display: inline-block;
     outline: 1px solid transparent;    
@@ -142,12 +143,12 @@
 }
 
 .hero__link .hero__link-img {
-    stroke: #FFFFFF;
+    stroke: var(--main-color, #FFFFFF);
 }
 
 .hero__link:hover .hero__link-img {
-    background-color: #FFFFFF;
-    stroke: #6C0287;
+    background-color: var(--main-color, #FFFFFF);
+    stroke: var(--color-purple, #6C0287 );
 }
 
 /* .hero__link:focus .hero__link-img {
@@ -155,13 +156,13 @@
 } */
 
 .hero__link:focus  {
-    outline:#CD06FF solid 1px;
+    outline:var(--color-pink, #CD06FF) solid 1px;
 }
 
 .hero__link:active .hero__link-img {
-    background-color: #CD06FF;
-    border: #CD06FF;
-    stroke: #fff;
+    background-color: var(--color-pink, #CD06FF);
+    border: var(--color-pink, #CD06FF);
+    stroke: var(--main-color, #FFFFFF);
 }
 
 .hero__title {
@@ -257,6 +258,25 @@
     transition-property: transform, box-shadow;
 }
 
+/* .rest__item:nth-child(2) {
+    padding-top: 70px;
+} */
+
+.rest__item:nth-child(2),
+.rest__item:nth-child(5) {
+    transform: translateY(70px);
+}
+
+.rest {
+    /* margin-bottom: 70px; */
+    padding-bottom: 125px;
+}
+/* .rest__item:nth-child(5) {
+    margin-bottom: 50px;
+} */
+
+
+
 .rest__item:hover .rest__img {
     transform: scale(1.1);
     box-shadow: 1px 1px 5px 1px rgba(253, 253, 253, 0.2),
@@ -265,6 +285,7 @@
 
 .rest__img_pic-vr {
     background-image: url("../images/about-rest/vr-glasses.jpg");
+   
 }
 
 .rest__img_pic-audio {
@@ -411,12 +432,12 @@
 } */
 
 .booking__radio-hall:focus + .booking__label-hall {
-    background-color: #fff;
+    background-color: var(--main-color, #FFFFFF);
     border: solid 3px #640AA3;
 }
 
 .booking__label-hall:focus  {
-    background-color: #fff;
+    background-color: var(--main-color, #FFFFFF);
     border: solid 3px #640AA3;
 }
 
@@ -427,9 +448,9 @@
 }
 
 .booking__label-hall:active {
-    background-color: #6C0287;
-    color: #fff;
-    border: solid 3px #FFFFFF;
+    background-color: var(--color-purple, #6C0287 );
+    color: var(--main-color, #FFFFFF);
+    border: solid 3px var(--main-color, #FFFFFF);
 }
 
 /* Disabled */
@@ -473,7 +494,7 @@
 }
 
 .booking__radio-games:focus, .booking__checkbox-games:focus {
-    outline: solid 1px #CD06FF;
+    outline: solid 1px var(--color-pink, #CD06FF);
 }
 
 .booking__checkbox-games {
@@ -542,7 +563,7 @@
 
 .booking__fieldset-input:focus {
     /* border: solid 2px #CD06FF; */
-    outline: solid 2px #CD06FF;
+    outline: solid 2px var(--color-pink, #CD06FF);
 }
 
 .booking__fieldset-wrap-name-tel {
@@ -565,29 +586,29 @@
 }
 
 .booking__button {
-    color: #6C0287;
+    color: var(--color-alt, #6C0287);
     font-size: 22px;
     font-weight: 700;
     line-height: 28px;
     padding: 13px 16px ;
     border-radius: 10px;
-    background-color: #FFFFFF;
+    background-color: var(--main-color, #FFFFFF);
     text-transform: uppercase;
     max-width: 280px;
     width: 100%;
-    border: solid 3px #FFFFFF;
+    border: solid 3px var(--main-color, #FFFFFF);
     transition-duration: 0.3s;
     transition-property: background-color, border;
 }
 
 .booking__button:hover {
     background-color: #EADEED;
-    border: solid 3px #6C0287;
+    border: solid 3px var(--color-purple, #6C0287 );
 }
 
 .booking__button:focus {
-    background-color: #FFFFFF;
-    border: solid 3px #6C0287;
+    background-color: var(---main-color, #FFFFFF);
+    border: solid 3px var(--color-purple, #6C0287 );
 }
 
 .booking__button:active {
@@ -639,7 +660,7 @@
 .about__quote::after {
     content: ' ” ';
     font-weight: 900;
-    color: #6C0287;
+    color: var(--color-purple, #6C0287 );
 }
 
 .about__quote::before {
@@ -648,7 +669,7 @@
     left: 0;
     top: -8px;
     font-weight: 900;
-    color: #6C0287;
+    color: var(--color-purple, #6C0287 );
 }
 
 .about__autor {
@@ -713,6 +734,7 @@
 .rewiews__autor {
     display: inline-block;
     margin-right: 20px;
+    position: relative;
 }
 
 .rewiews__avatar {
@@ -722,6 +744,7 @@
     object-fit: cover;
     object-position: top;
     margin-bottom: 11px;
+    z-index: 0;
 }
 
 .rewiews__caption {
@@ -737,8 +760,28 @@
     font-size: 20px;
 }
 
+.rewiews__gradient {
+    display: inline-block;
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+}
+
+.rewiews__gradient::before {
+    content: '';
+    display: inline-block;
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+    z-index: 80;
+    position: absolute; 
+    top: 0;      
+	left: 0;
+    background-image: radial-gradient(circle, #C4C4C4 0%, #6C0287 65%);
+    opacity: 0.4;
+}
+
 .questions__element {
-    
     font-weight: 700;
     font-size: 24px;
     line-height: 46px;
@@ -748,12 +791,12 @@
 }
 
 .questions__element:nth-child(even) {
-    color: #fff ;
+    color: var(--main-color, #FFFFFF) ;
     background-color: #440f51 ;
 }
 
 .questions__element:nth-child(odd) {
-    background-color: #fff;
+    background-color: var(--main-color, #FFFFFF);
     color: #1C1A1A;
 }
 .questions__link {
@@ -762,12 +805,12 @@
 }
 
 .questions__svg {
-    border: 2px solid #6C0287;
+    border: 2px solid var(--color-purple, #6C0287 );
     border-radius: 50%;
 }
 
 .questions__svg-white {
-    border: 2px solid #FFFFFF;
+    border: 2px solid var(--main-color, #FFFFFF);
     border-radius: 50%;
 }
 
@@ -780,25 +823,25 @@
 
 
 .questions__link:hover .questions__svg {
-    stroke: #FFFFFF;
-    background-color: #6C0287;
-    border: #FFFFFF ;
+    stroke: var(--main-color, #FFFFFF);
+    background-color: var(--color-purple, #6C0287 );
+    border: var(--main-color, #FFFFFF) ;
 }
 
 .questions__link:hover .questions__svg-white {
-    background-color:#FFFFFF;
-    stroke: #6C0287;
-    border: #6C0287;
+    background-color:var(--main-color, #FFFFFF);
+    stroke: var(--color-purple, #6C0287 );
+    border: var(--color-purple, #6C0287 );
 }
 
 .questions__link:active .questions__svg .questions__svg-path{
-    stroke: #6C0287;
+    stroke: var(--color-purple, #6C0287 );
     outline: transparent;
     /* border: #6C0287; */
 }
 
 .questions__link:active .questions__svg-white .questions__svg-path {
-    stroke: #FFFFFF;
+    stroke: var(--main-color, #FFFFFF);
     outline: transparent;
     /* border:#FFFFFF ; */
 }
@@ -868,11 +911,11 @@
 }
 
 .list-social__link:focus .footer__link-img {
-    outline: solid 1px #CD06FF;
+    outline: solid 1px var(--color-pink, #CD06FF);
 }
 
 .list-social__link:active .footer__link-img .footer__link-img-path {
-    fill: #CD06FF;
+    fill: var(--color-pink, #CD06FF);
 }
 
 .footer {
@@ -899,7 +942,7 @@
 }
 
 .footer__link:hover {
-    color: #6C0287;
+    color: var(--color-purple, #6C0287 );
 }
 
 .footer__wrap-link {
@@ -930,5 +973,5 @@
 }
 
 .footer__contact:hover {
-    color: #CD06FF;
+    color: var(--color-pink, #CD06FF);
 }
