--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,10 @@ body {
     min-height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
-    color: #fff;
+    color: var(--main-color, #FFFFFF);
     font-size: 20px;
     line-height: 28px;
-    background-color: #1B1A1B;
+    background-color: var(--bg-color, #1B1A1B);
     margin: 0;
 }
 
