--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
     min-height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
-    color: var(--main-color, #FFFFFF);
+    color: var(--white-900, #FFFFFF);
     font-size: 20px;
     line-height: 28px;
     background-color: var(--bg-color, #1B1A1B);
